# Lumen-RL

./: .dockerignore  .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  setup.py
.claude/: tmp-rl-bugs.md
.cursor/: tmp-rl-bugs.md
.github/workflows/: docs.yml
configs/: dapo_dense_fp8.yaml  dapo_moe_fp8_r3.yaml  grpo_dense_bf16.yaml  grpo_dense_fp8.yaml  grpo_dense_fp8_8gpu.yaml  grpo_moe_fp8_r3.yaml  grpo_moe_fp8_r3_multinode.yaml  grpo_moe_r3.yaml  opd_dense_bf16.yaml  spec_distill_dflash.yaml  spec_distill_eagle3.yaml
configs/recipes/: deepseek_v3_grpo_4n8g.yaml  llama3_8b_grpo_1n8g.yaml  qwen3_moe_30b_grpo_2n8g.yaml  ray_controller_dispatch_modes_1n8g.yaml
dashboards/: 1a-bf16-async.html
dashboards/1a-bf16-sync/: dashboard.html
dashboards/DAPO/: Qwen3-8B-Base_BF16_DAPO-Async.html  Qwen3-8B-Base_BF16_DAPO-Sync.html
docker/: Dockerfile  Dockerfile.dev  build.sh
examples/: run_dapo.py  run_eval.py  run_grpo.py  run_grpo_moe.py  run_opd.py  run_spec_distill.py
examples/DAPO/: FP8_TRAINING_ALIGNMENT_PLAN.md  README.md  common.sh  run_1a_8gpu.sh  run_1a_bf16_async.sh  run_1a_bf16_baseline.sh  run_1a_bf16_sync.sh  run_1a_native.sh  run_1b_fp8_rollout_tis.sh  run_1d_fp8_e2e_blockwise.sh  run_1f_fp8_e2e_per_tensor.sh  smoke_test.sh  (+2 more)
figures/: async_architecture.html
lumenrl/: __init__.py
lumenrl-docs/: .gitignore
output/: convert_hf_to_ckpt.py  export_eagle3_hf.py  export_eagle3_hf_gpt_oss.py  export_eagle3_hf_phase1.py  export_eagle3_hf_phase2.py
scripts/: launch_single_node.sh  launch_slurm.sh  ray.sub
tests/: test_mori_io_e2e.py
(+318 files in other folders)
